--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -164,15 +164,15 @@
 }
 
 .prose ul {
-  @apply list-disc list-inside mb-4 pl-4;
+  @apply list-disc list-outside mb-4 ml-6;
 }
 
 .prose ol {
-  @apply list-decimal list-inside mb-4 pl-4;
+  @apply list-decimal list-outside mb-4 ml-6;
 }
 
 .prose li {
-  @apply mb-2;
+  @apply mb-1 pl-1;
 }
 
 .prose blockquote {
